crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/export-default-from.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-export-default-from


export v from 'mod';
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,7 @@
 // https://babeljs.io/docs/en/babel-plugin-proposal-export-default-from
 
-export v from "mod";
+
+export
+v;
+from;
+("mod");
```

# Output

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-export-default-from


export
v;
from;
("mod");
```


# Errors
```
error[SyntaxError]: expected `*` but instead found `v`
  ┌─ export-default-from.js:4:8
  │
4 │ export v from 'mod';
  │        ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export-default-from.js:4:10
  │
4 │ export v from 'mod';
  │        --^^^^
  │        │ │
  │        │ An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export-default-from.js:4:15
  │
4 │ export v from 'mod';
  │          -----^^^^^
  │          │    │
  │          │    An explicit or implicit semicolon is expected here...
  │          ...Which is required to end this statement


```


